--- a/.gitignore
+++ b/.gitignore
@@ -49,6 +49,10 @@ coverage.xml
 *.mo
 *.pot
 
+# Compiled Python
+*.pyc
+*.pyo
+
 # Django stuff:
 *.log
 local_settings.py
@@ -68,6 +72,9 @@ target/
 
 # IPython Notebook
 .ipynb_checkpoints
+
+# vim swap files
+*.swp
 
 # pyenv
 .python-version
