--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: python
+
 python:
   - "2.6"
   - "2.7"
@@ -11,8 +12,11 @@ python:
   - "3.6-dev" # 3.6 development branch
   - "3.7-dev" # 3.7 development branch
   - "nightly" # currently points to 3.7-dev
+
 # command to install dependencies
 install: "pip install -r requirements.txt"
+
 # command to run tests
+before_script: export PYTHONPATH=$PYTHONPATH:$(pwd)
 script: py.test
 
